fixed vertical margin between wrapped nav items

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -4,7 +4,7 @@ header {
 
   padding-left: 1rem;
   padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-bottom: 1.5rem;
 
   background-color: $color-dark;
   color: white;
@@ -28,6 +28,7 @@ header {
 .header-navigation-item {
   display: inline-block;
   margin-right: 1rem;
+  margin-bottom: 0.5rem;
 
   color: white;
 }
